# cpp11sandbox

./: CMakeLists.txt  README.md  cpp11config.hh.in  groups  license.txt  project.config
src/: main.cc
src/Builder/: CMakeLists.txt  builder.cc  builder.hh  dwarf.hh  elf.hh  human.hh  manufacturer.hh  sword.cc  sword.hh  witcher.hh
src/Factory/: CMakeLists.txt  factory.cc  factory.hh  htmldocument.cc  htmldocument.hh  htmlreader.cc  htmlreader.hh  htmlwriter.cc  htmlwriter.hh  plaintextdocument.cc  plaintextdocument.hh  plaintextreader.cc  plaintextreader.hh  plaintextwriter.cc  plaintextwriter.hh
src/Singleton/: CMakeLists.txt  threadsafesingleton.cc  threadsafesingleton.hh
src/Visitor/: CMakeLists.txt  areacalc.cc  areacalc.hh  circle.cc  circle.hh  triangle.cc  triangle.hh  validator.cc  validator.hh  visitable.hh  visitor.hh
test/: CMakeLists.txt  test.cc
